name:                mollie-api-haskell
version:             2.0.0.0
synopsis:            Mollie API client for Haskell http://www.mollie.com
description:         Please see README.md
homepage:            https://github.com/paramander/mollie-api-haskell
license:             BSD3
license-file:        LICENSE
author:              Paramander
maintainer:          mats@paramander.com
copyright:           2018 Paramander
category:            Web
build-type:          Simple
-- extra-source-files:
data-files:          data/cacert.pem
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mollie.API
                     , Mollie.API.Payments
                     , Mollie.API.Refunds
                     , Mollie.API.Methods
                     , Mollie.API.Customers
                     , Mollie.API.Mandates
                     , Mollie.API.Subscriptions
                     , Mollie.API.Chargebacks
                     , Mollie.API.Types
  other-modules:       Mollie.API.Internal
                     , Mollie.API.Helpers
                     , Paths_mollie_api_haskell
  build-depends:       base
                     , aeson
                     , time
                     , text
                     , http-client
                     , http-client-tls
                     , http-media
                     , mtl
                     , http-types
                     , bytestring
                     , currency-codes
                     , unordered-containers
                     , lens
                     , servant
                     , servant-client
                     , servant-client-core
                     , data-default
  default-language:    Haskell2010

test-suite mollie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions:  OverloadedStrings
  other-modules:       Fixtures
  build-depends:       base
                     , mollie-api-haskell
                     , tasty
                     , tasty-hunit
                     , aeson
                     , bytestring
                     , currency-codes
                     , lens
                     , data-default
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/paramander/mollie-api-haskell
